--- a/.examples/docker-compose/insecure/mariadb/fpm/docker-compose.yml
+++ b/.examples/docker-compose/insecure/mariadb/fpm/docker-compose.yml
@@ -7,16 +7,10 @@ services:
     restart: always
     volumes:
       - db:/var/lib/mysql
-    secrets:
-      - db_root_password
-      - db_name
-      - db_user_name
-      - db_password
     environment:
-      - MYSQL_ROOT_PASSWORD=/run/secrets/db_root_password
-      - MYSQL_PASSWORD=/run/secrets/db_password
-      - MYSQL_DATABASE=/run/secrets/db_name
-      - MYSQL_USER=/run/secrets/db_user_name
+      - MYSQL_ROOT_PASSWORD=password123456
+    env_file:
+      - db.env
 
   redis:
     image: redis:alpine
@@ -31,21 +25,14 @@ services:
       - config:/var/www/html/config
       - data:/var/www/html/data
       - theme:/var/www/html/themes/rengacloud
+    env_file:
+      - db.env
     environment:
       - MYSQL_HOST=db
       - REDIS_HOST=redis
-      - NEXTCLOUD_ADMIN_PASSWORD_FILE=/run/secrets/rengacloud_admin_password
-      - NEXTCLOUD_ADMIN_USER_FILE=/run/secrets/rengacloud_admin_user
-      - MYSQL_DATABASE=/run/secrets/db_name
-      - MYSQL_USER=/run/secrets/db_user_name
     depends_on:
       - db
-      - redis
-    secrets:
-      - rengacloud_admin_password
-      - rengacloud_admin_user
-      - db_name
-      - db_user_name
+      - redis   
 
   web:
     build: ./web
@@ -74,17 +61,3 @@ volumes:
   config:
   data:
   theme:
-  
-secrets:
-  db_root_password:
-    file: ./db_root_password.txt
-  db_password:
-    file: ./db_password.txt
-  rengacloud_admin_password:
-    file: ./rengacloud_admin_password.txt
-  rengacloud_admin_user:
-    file: ./rengacloud_admin_user.txt
-  db_name:
-    file: ./db_name.txt
-  db_user_name:
-    file: ./db_user_name.txt
