--- a/.examples/docker-compose/with-nginx-proxy/mariadb/fpm/docker-compose.yml
+++ b/.examples/docker-compose/with-nginx-proxy/mariadb/fpm/docker-compose.yml
@@ -106,6 +106,13 @@ services:
 #    networks:
 #      - proxy-tier
 
+  user_api:
+    build: ../../../../../rengacloud/user_api
+    restart: always
+    ports:
+      - 5001:5001
+    
+
 volumes:
   db:
   nextcloud:
