--- a/.examples/docker-compose/with-nginx-proxy/mariadb/fpm/docker-compose.yml
+++ b/.examples/docker-compose/with-nginx-proxy/mariadb/fpm/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
   db:
+    container_name: db
     image: mariadb:10.5
     command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
     restart: always
@@ -13,10 +14,12 @@ services:
       - ../../../../../rengacloud/db.env
 
   redis:
+    container_name: redis
     image: redis:alpine
     restart: always
 
   app:
+    container_name: app
     build: ../../../../../rengacloud
     restart: always
     volumes:
@@ -35,6 +38,7 @@ services:
       - redis
 
   web:
+    container_name: web
     build: ./web
     restart: always
     ports:
@@ -52,6 +56,7 @@ services:
       - default
 
   cron:
+    container_name: cron
     image: nextcloud:fpm-alpine
     restart: always
     volumes:
@@ -62,6 +67,7 @@ services:
       - redis
 
   proxy:
+    container_name: proxy
     build: ./proxy
     restart: always
     ports:
